# boundary-value-problems-for-odes

./: .gitignore  CMakeLists.txt  README.md  run.ps1
include/: models.hpp  solver.hpp  task_utils.hpp
include/tasks/: first_dirichlet_main.hpp  first_dirichlet_test.hpp  mixed_main_improved.hpp  mixed_test_classic.hpp
input_examples/: default_input.json  quick_input.json
src/: main.cpp  solver.cpp  task_utils.cpp
src/tasks/: first_dirichlet_main.cpp  first_dirichlet_test.cpp  mixed_main_improved.cpp  mixed_test_classic.cpp
ui/: app.py
